--- a/encyclopedia/templates/encyclopedia/page.html
+++ b/encyclopedia/templates/encyclopedia/page.html
@@ -6,6 +6,9 @@
 
 {% block body %}
 
-<h1> {{ body }} </h1>
+<a href="{% url 'edit' name %}">Edit page</a>
+<div>
+    {{ body|safe }}
+</div>
 
 {% endblock %}
